# phantom-mesh

./: .gitignore  Cargo.toml  README.md
crates/bootstrap/: Cargo.toml
crates/bootstrap/src/: main.rs  server.rs  state.rs
crates/bot/: Cargo.toml  build.rs
crates/bot/linux/: Cargo.toml
crates/bot/linux/src/: main.rs
crates/bot/linux/src/modules/: loader.rs  mod.rs
crates/bot/linux/src/p2p/: c2.rs
crates/bot/linux/src/utils/: files.rs
crates/bot/src/: commands.rs  main.rs
crates/bot/src/common/: constants.rs  mod.rs  polymorph.rs
crates/bot/src/host/: mod.rs  network.rs  process.rs  syscalls.rs
crates/bot/src/p2p/: c2.rs
crates/bot/src/security/: anti_analysis.rs  mod.rs
crates/bot/src/system/: anti_analysis.rs  c2.rs  dht.rs  logic.rs  mod.rs  process.rs  registry.rs
crates/bot/windows/: Cargo.toml
crates/bot/windows/src/: commands.rs  main.rs
crates/bot/windows/src/host/: logic.rs
crates/bot/windows/src/modules/: loader.rs  mod.rs
crates/bot/windows/src/p2p/: c2.rs
crates/core/common/: Cargo.toml
crates/core/common/src/: oracle.rs
crates/core/common/src/discovery/: local.rs
crates/core/protocol/src/: quic.rs
crates/ghost/: Cargo.toml
crates/ghost/src/: crypto.rs  main.rs  network.rs
crates/loader/: Cargo.toml
crates/loader/src/: lib.rs  loader.rs  main.rs  scanner.rs
crates/master/: Cargo.toml
crates/master/src/: commands.rs  crypto.rs  main.rs  network.rs
crates/node/: Cargo.toml
crates/node/src/: commands.rs  main.rs
crates/node/src/common/: constants.rs
crates/node/src/system/: c2.rs  process.rs  registry.rs
crates/node/src/utils/: paths.rs
crates/nodes/edge/: Cargo.toml  build.rs
crates/nodes/edge/src/: commands.rs  main.rs
crates/nodes/edge/src/common/: constants.rs
crates/nodes/edge/src/config/: constants.rs
crates/nodes/edge/src/discovery/: oracle.rs  parasitic.rs
crates/nodes/edge/src/helpers/: paths.rs
crates/nodes/edge/src/host/: mod.rs  process.rs  registry.rs
crates/nodes/edge/src/modules/: plugin_manager.rs
crates/nodes/edge/src/p2p/: c2.rs  commands.rs  dht.rs  mod.rs  transport.rs
crates/nodes/edge/src/security/: anti_analysis.rs  mod.rs
crates/nodes/edge/src/utils/: paths.rs
crates/nodes/master/: Cargo.toml
crates/nodes/master/src/: commands.rs  crypto.rs  main.rs  network.rs
crates/nodes/master/src/discovery/: parasitic.rs
crates/nodes/mesh/: Cargo.toml  build.rs
crates/nodes/mesh/src/: main.rs
crates/nodes/phantom/src/: commands.rs  main.rs
crates/payloads/ddos/: Cargo.toml
crates/payloads/ddos/src/: main.rs
crates/payloads/miner/: Cargo.toml
crates/payloads/miner/src/: config.rs  main.rs
crates/payloads/ransomware/: Cargo.toml
crates/payloads/ransomware/src/: main.rs
crates/plugins/propagator/: Cargo.toml
crates/plugins/propagator/src/: main.rs
crates/protocol/: Cargo.toml
crates/protocol/src/: crypto.rs  lib.rs  packet.rs  transport.rs
crates/relay/: Cargo.toml
crates/relay/src/: main.rs  server.rs  state.rs
crates/tools/loader/: Cargo.toml
keys/: master.pub
scripts/: generate.sh
src/: commands.rs
src/system/: process.rs
(+26 files in other folders)
