[workspace]
resolver = "2"
members = [
    "crates/nodes/edge",   # prev bot/windows
    "crates/nodes/mesh",   # prev bot/linux
    "crates/nodes/master",
    "crates/nodes/mesh",
    "crates/nodes/edge",
    "crates/loader",
    "crates/plugins/propagator",
    "crates/protocol",
]

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
opt-level = "z"
