[package]
name = "relay"
version = "0.1.0"
edition = "2024"

[dependencies]
dashmap = "6.1.0"
env_logger = "0.11.8"
futures-util = "0.3.31"
log = "0.4.29"
protocol = { version = "0.1.0", path = "../protocol" }
rand = "0.9.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
tokio = { version = "1.48.0", features = ["full"] }
tokio-tungstenite = { version = "0.28.0", features = ["native-tls"] }
