[package]
name = "payload_miner"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
reqwest = { version = "0.11", features = ["blocking", "json", "rustls-tls"] } 
zip = "0.6"
# Add specific mining logic dependencies here later
